syntax = "proto3";

package hello;

option go_package = "./hello";

import "google/api/annotations.proto";

message HelloWorldRequest {
  string message = 1;
}

message HelloWorldResponse {
  string message = 1;
}

service HelloWorld {
  rpc GetHelloWorld (HelloWorldRequest) returns (HelloWorldResponse) {
    option (google.api.http) = {
      get: "/v1/hello-world"
    };
  }
}